Fixed navbar bugs - whitespace between root items on deksotp - background not extending to bottom on mobile - made header sticky for both

--- a/input/assets/css/layout.scss
+++ b/input/assets/css/layout.scss
@@ -15,6 +15,8 @@ header {
 	grid-column: page-start / page-end;
 	display: grid;
 	grid-template-columns: inherit;
+	position: sticky;
+	top: 0;
 
 	.container {
 		grid-column: content-start / content-end;
